# opensearch-lite

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  build.rs
.github/workflows/: ci.yml
benches/: agent_fallback_models.rs  search_scan.rs
docker/: docker-compose.secure.yml  docker-compose.yml  mainstack-search.Dockerfile  opensearch-lite.Dockerfile
docker/java-smoke/: Dockerfile  entrypoint.sh  pom.xml
docs/: agent-fallback-benchmarks.md  agent-fallback.md  api-coverage.md  compatibility.md  driver-examples.md  kubernetes-security.md  migration.md  naming-research.md  opensearch-dashboards-gap-analysis.md  security.md  supported-apis.md  yaml-parity.md
examples/: api_coverage.rs
scripts/: package-release.sh  run-java-client-smoke.sh  run-javascript-client-smoke.sh  run-opensearch-parity-smoke.sh  run-performance-gates.sh  run-python-client-smoke.sh  update-opensearch-rest-spec.sh
src/: config.rs  lib.rs  main.rs  resources.rs  rest_path.rs  runtime.rs  server.rs
tests/: agent_benchmark_harness.rs  agent_fallback.rs  api_inventory.rs  bulk_surface.rs  catalog_surface.rs  dashboards_aggregation_surface.rs  dashboards_metadata_surface.rs  dashboards_migration_surface.rs  dashboards_workflow_surface.rs  document_surface.rs  durable_agent_read_surface.rs  http_surface.rs  java_client_smoke.rs  javascript_client_smoke.rs  live_agent_backend.rs  opensearch_yaml_fixtures.rs  opensearch_yaml_runner.rs  pit_surface.rs  python_client_smoke.rs  resource_diagnostics.rs  search_surface.rs  security_surface.rs  snapshot_surface.rs  tls_surface.rs
(+99 files in other folders)
